test/zinc_source/compile_errors/iterations/02_empty_set_iteration_no_inference.zn
// expected-error: cannot infer type

fn main() {
    values = set()
    for value in values {
        print("{value}")
    }
}
